# DwhService

./: .gitignore  Dockerfile  README.md  alembic.ini  deployment.yaml  k8s-deployment.yaml  main.py  pyproject.toml
.github/workflows/: deploy.yml
alembic/: env.py
alembic/versions/: 2024_08_09_1940-9783e63b7311_init.py  2024_08_09_1942-d6bfcc96ec19_test_description_delete.py  2024_08_09_1945-74868a91f5d5_init.py
cfg/: .env.template  const.py  сonfig.py
src/: main.py
src/data/: group_dwh_orm.py  level_dwh_orm.py  user_dwh_orm.py  word_dwh_orm.py
src/db/: base.py  database.py
src/dto/: dwh_message.py  schema.py
src/model/: UUIDEncoder.py  action_dwh_enum.py  group_dwh.py  level_dwh.py  user_dwh.py  word_dwh.py
src/service/: abstract_message_handler.py  consumer_service.py  group_message_handler.py  level_message_handler.py  message_dispatcher.py  user_message_handler.py  word_message_handler.py
tests/: conftest.py
tests/unit/: test_data_preparation.py
tests/unit/src/data/: group_dwh_orm_test.py  level_dwh_orm_test.py  user_dwh_orm_test.py  word_dwh_orm_test.py
